app/3-example/6-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api
  namespace: production
spec:
  selector:
    istio: gateway   # kubectl get pods -n istio-system -l istio=gateway  # should match the gateway pod
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - xeniumsolution.online
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - xeniumsolution.online
      tls:
        credentialName: xen-cert-secret
        mode: SIMPLE
