app/3-example/5-virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: second-app
  namespace: production
spec:
  hosts:
    - xeniumsolution.online
    - second-app
  gateways:
    - api
  http:
    - match:
        - uri:
            prefix: /.well-known/acme-challenge/
      route:
        - destination:
            host: cert-manager.cert-manager.svc.cluster.local
            port:
              number: 9402  # Cert-Manager's HTTP port
    - match:
        - uri:
            prefix: /   
      route:
        - destination:
            host: second-app.production.svc.cluster.local  # must use FQDN here
            # port:
            #   number: 80
        #     subset: v1
        #   weight: 10
        # - destination:
        #     host: second-app
        #     subset: v2
        #   weight: 90
